[package]
description = "A wrapper around `sqlx::Error` to provide error path and additional context"
edition = "2021"
license = "MIT"
name = "sqlx-error"
repository = "https://github.com/imbolc/sqlx-error"
version = "0.1.1"

[dependencies]
sqlx-core = { version = "0.6", default-features = false }

[features]
default = ["runtime-tokio-rustls"]
runtime-actix-native-tls = ["sqlx-core/runtime-tokio-native-tls"]
runtime-actix-rustls = ["sqlx-core/runtime-tokio-rustls"]
runtime-async-std-native-tls = ["sqlx-core/runtime-async-std-native-tls"]
runtime-async-std-rustls = ["sqlx-core/runtime-async-std-rustls"]
runtime-tokio-native-tls = ["sqlx-core/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx-core/runtime-tokio-rustls"]

[dev-dependencies]
rusty-hook = "0.11"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls"] }
thiserror = "1"
