[package]
description = "A wrapper around `sqlx::Error` to provide error path and additional context"
edition = "2021"
license = "MIT"
name = "sqlx-error"
repository = "https://github.com/imbolc/sqlx-error"
version = "0.4.0"

[dependencies]
code-path = "0.3"
sqlx-core = { version = "0.7" }

[dev-dependencies]
rusty-hook = "0.11"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls"] }
thiserror = "1"
